# spor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WIP.md
cmake/: flags.cmake  get_cpm.cmake
lib/: zpp_bits.h  zpp_bits_access.h
listener/: CMakeLists.txt  JLink_RTT.cpp  JLink_RTT.h  main.cpp
scripts/: lint.sh  rtt.sh
src/orbcat/: CMakeLists.txt  Orbcat.cpp  Orbcat.hpp  README.md  orbuculum.cmake
src/profiler-api/: CMakeLists.txt  Logging.hpp  Packet.hpp  PerfettoApi.cpp  PerfettoApi.hpp  Slice.hpp  TimeUtils.cpp  TimeUtils.hpp  Track.cpp  Track.hpp
src/spor-common/: Channels.hpp  Messages.hpp  MessagesFreertos.hpp  TargetPointer.hpp
src/spor-common/utils/: String.hpp  StringWire.hpp  TypeList.hpp
src/spor-devices/: DeviceInfo.hpp  gd32f4xx.cpp
src/spor-host/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  Dispatcher.hpp  Options.hpp  SporHost.cpp  SporHost.hpp  SporHostFreertos.cxx  State.cpp  State.hpp  main.cpp
src/spor-target/: CMakeLists.txt  README.md
src/spor-target/src/: IrqLockGuard.hpp  Spor.cpp  Spor.h  SporScoped.hpp  Utils.hpp  Write.cpp
src/spor-target/src/freertos/: SporFreertos.cpp  SporFreertos.h
src/spor-target/src/instrument_functions/: instrument_functions.cpp
src/spor-target/src/transport/: RTT.hpp  Transport.cpp  Transport.hpp
src/symbol-resolver/: CMakeLists.txt  ElfSymbolResolver.cpp  ElfSymbolResolver.hpp  SymbolResolver.cpp  SymbolResolver.hpp
test/: roundtrip.cpp
test/build-target/: CMakeLists.txt  FreeRTOSConfig.h  RTT_stubs.cpp  main.cpp
test/build-target/gd32-libraries/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
test/build-target/gd32-libraries/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
test/build-target/gd32-libraries/CMSIS/GD/GD32F4xx/Source/ARM/: startup_gd32f450_470.s
